samples/_failures_safe/1761259481_3f1fd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5861b9e.c: In function ‘main’:
./samples/SAFE/__tmp_c5861b9e.c:171:38: error: ‘MAX’ undeclared (first use in this function)
  171 |     TokenStack* stack = create_stack(MAX
      |                                      ^~~
./samples/SAFE/__tmp_c5861b9e.c:171:38: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c5861b9e.c:171:41: error: expected ‘)’ at end of input
  171 |     TokenStack* stack = create_stack(MAX
      |                                     ~   ^
      |                                         )
./samples/SAFE/__tmp_c5861b9e.c:171:5: error: expected declaration or statement at end of input
  171 |     TokenStack* stack = create_stack(MAX
      |     ^~~~~~~~~~
